# playwright-vs-selenium

./: .gitignore  LICENSE  README.md  pyproject.toml
playwright-python-starter/: environment.yml  pytest.ini  python_env_builder.bat
playwright-python-starter/pages/sauce_demo_pages/: catalog_page.py
playwright-python-starter/utils/: decorators.py
playwright-starter/: dynconfig.py  settings.yaml
playwright-starter/pages/sauce_demo_pages/: login_page.py
playwright-starter/tests/: conftest.py  test_demo.py
selenium-python-starter/: dynconfig.py
selenium-python-starter/pages/: LoginPage.py
selenium-python-starter/tests/: test_demo.py
selenium-starter/pages/: CatalogPage.py
selenium-starter/tests/: conftest.py
